--- a/portfolio.html
+++ b/portfolio.html
@@ -84,13 +84,20 @@
           <ul class="projectcard list">
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/banking_app.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/banking_app.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">
                     Banking App Interface Concept
@@ -101,13 +108,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/cashless.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/cashless.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">
                     Cashless Payment
@@ -118,13 +132,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/meditaion.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/meditaion.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">
                     Meditation App
@@ -135,13 +156,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/taxi.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/taxi.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">Taxi Service</h2>
                   <p class="projectcard-position link text">Marketing</p>
@@ -150,13 +178,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/screen.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/screen.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">
                     Screen Illustrations
@@ -167,13 +202,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/online_courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/online_courses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">
                     Online Courses
@@ -184,13 +226,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/instagram.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/instagram.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">
                     Instagram Stories Concept
@@ -201,13 +250,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/organic_food.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/organic_food.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">Organic Food</h2>
                   <p class="projectcard-position link text">Web Site</p>
@@ -216,13 +272,20 @@
             </li>
             <li class="projectcard-item">
               <a class="link" href="">
-                <img
-                  class="projectcard-img"
-                  src="./images/fresh_coffee.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="projectcard-top">
+                  <img
+                    class="projectcard-img"
+                    src="./images/fresh_coffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="projectcard-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="element-style">
                   <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
                   <p class="projectcard-position link text">Web Site</p>
