--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
@@ -29,7 +33,9 @@
           </a>
           <ul class="menu list text">
             <li class="menu-item">
-              <a href="./index.html" class="menu-item-link link">Studio</a>
+              <a href="./index.html" class="menu-item-link link current"
+                >Studio</a
+              >
             </li>
             <li class="menu-item">
               <a href="./portfolio.html" class="menu-item-link link"
@@ -62,7 +68,9 @@
       <section class="section hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="button link btn" type="button">Order Service</button>
+          <button class="button link btn" data-modal-open type="button">
+            Order Service
+          </button>
         </div>
       </section>
       <!--section2-->
@@ -462,5 +470,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="model">
+        <button type="button" class="model-close" data-modal-close>
+          <svg width="8" height="8" class="button-close">
+            <use href="./images/symbol-defs.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
