--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a href="./index.html" class="menu-item-link link">Studio</a>
             </li>
             <li class="menu-item">
-              <a href="./portfolio.html" class="menu-item-link link"
+              <a href="./portfolio.html" class="menu-item-link link current"
                 >Portfolio</a
               >
             </li>
