--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
     <main>
       <!--section1-->
       <section class="section hero">
-        <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="button link btn" data-modal-open type="button">
-            Order Service
-          </button>
-        </div>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="button link btn" data-modal-open type="button">
+          Order Service
+        </button>
       </section>
       <!--section2-->
       <section class="section features">
@@ -471,8 +469,8 @@
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-      <div class="model">
-        <button type="button" class="model-close" data-modal-close>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
           <svg width="8" height="8" class="button-close">
             <use href="./images/symbol-defs.svg#icon-close-black"></use>
           </svg>
