--- a/index.html
+++ b/index.html
@@ -466,8 +466,34 @@
             </li>
           </ul>
         </div>
+
+        <div class="subscribe">
+          <form class="subscribe-form">
+            <p class="subscribe-text">Subscribe</p>
+            <div class="subscribe-section">
+              <label class="subscribe-section" for="email"></label>
+              <input
+                class="subscribe-input"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="E-mail"
+              />
+
+              <button class="subscribe-button" type="submit">
+                <b class="subscribe-submit">Subscribe</b>
+                <svg class="subscribe-svg">
+                  <use
+                    href="./images/icons.svg/symbol-defs-send.svg#icon-subscribe"
+                  ></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+    <!--modal-window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
@@ -475,6 +501,66 @@
             <use href="./images/symbol-defs.svg#icon-close-black"></use>
           </svg>
         </button>
+
+        <h2 class="modal-title">
+          Leave your contacts and we will call you back
+        </h2>
+        <form class="modal-form">
+          <div class="modal-list">
+            <label class="modal-name" for="name">Name</label>
+            <div class="modal-icon">
+              <input type="text" class="modal-input" name="name" id="name" />
+              <svg width="12" height="12" class="input-icon">
+                <use href="./images/symbol-defs.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-list">
+            <label class="modal-phone" for="phone">Phone</label>
+            <div class="modal-icon">
+              <input type="text" class="modal-input" name="phone" id="phone" />
+              <svg width="12" height="12" class="input-icon">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-list">
+            <label class="modal-email" for="email">E-mail</label>
+            <div class="modal-icon">
+              <input type="text" class="modal-input" name="email" id="email" />
+              <svg width="12" height="12" class="input-icon">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="coment" role="group">
+            <label for="feedback">Comment</label>
+            <textarea
+              class="text-comment-input"
+              name="feedback"
+              rows="5"
+              id="feedback"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="accept" role="group">
+            <input
+              class="checkbox"
+              type="checkbox"
+              name="checkbox"
+              id="checkbox"
+            />
+            <label class="text-commetn" for="checkbox">
+              I accept the terms and conditions of the
+              <a class="privacy" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="button-send" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
