--- a/index.html
+++ b/index.html
@@ -482,10 +482,8 @@
 
               <button class="subscribe-button" type="submit">
                 <b class="subscribe-submit">Subscribe</b>
-                <svg class="subscribe-svg">
-                  <use
-                    href="./images/icons.svg/symbol-defs-send.svg#icon-subscribe"
-                  ></use>
+                <svg width="24px" height="24" class="subscribe-svg">
+                  <use href="./images/symbol-defs.svg#icon-sub"></use>
                 </svg>
               </button>
             </div>
@@ -498,7 +496,7 @@
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg width="8" height="8" class="button-close">
-            <use href="./images/symbol-defs.svg#icon-close-black"></use>
+            <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
 
