--- a/portfolio.html
+++ b/portfolio.html
@@ -344,6 +344,28 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <form class="subscribe-form">
+            <p class="subscribe-text">Subscribe</p>
+            <div class="subscribe-section">
+              <label class="subscribe-section" for="email"></label>
+              <input
+                class="subscribe-input"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="E-mail"
+              />
+
+              <button class="subscribe-button" type="submit">
+                <b class="subscribe-submit">Subscribe</b>
+                <svg width="24px" height="24" class="subscribe-svg">
+                  <use href="./images/symbol-defs.svg#icon-sub"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
