--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
           <div class="coment" role="group">
             <label for="feedback">Comment</label>
             <textarea
-              class="text-comment-input"
+              class="modal-input text-comment-input"
               name="feedback"
               rows="5"
               id="feedback"
@@ -552,6 +552,11 @@
               name="checkbox"
               id="checkbox"
             />
+            <div class="check-wrap">
+              <svg width="8" height="8" class="check">
+                <use href="./images/symbol-defs.svg#icon-Vector"></use>
+              </svg>
+            </div>
             <label class="text-commetn" for="checkbox">
               I accept the terms and conditions of the
               <a class="privacy" href="">Privacy Policy</a>
