--- a/index.html
+++ b/index.html
@@ -552,12 +552,12 @@
               name="checkbox"
               id="checkbox"
             />
-            <div class="check-wrap">
-              <svg width="8" height="8" class="check">
-                <use href="./images/symbol-defs.svg#icon-Vector"></use>
-              </svg>
-            </div>
             <label class="text-commetn" for="checkbox">
+              <span class="check-wrap">
+                <svg width="8" height="8" class="check">
+                  <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the
               <a class="privacy" href="">Privacy Policy</a>
             </label>
