--- a/index.html
+++ b/index.html
@@ -558,8 +558,10 @@
                   <use href="./images/symbol-defs.svg#icon-Vector"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="privacy" href="">Privacy Policy</a>
+              <span class="text-comment-content">
+                I accept the terms and conditions of the
+                <a class="privacy" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="button-send" type="submit">Send</button>
