--- a/index.html
+++ b/index.html
@@ -471,12 +471,12 @@
           <form class="subscribe-form">
             <p class="subscribe-text">Subscribe</p>
             <div class="subscribe-section">
-              <label class="subscribe-section" for="email"></label>
+              <label class="subscribe-section" for="subscribe"></label>
               <input
                 class="subscribe-input"
                 type="email"
-                id="email"
-                name="email"
+                id="subscribe"
+                name="subscribe"
                 placeholder="E-mail"
               />
 
