--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="./index.html" class="logo-web link"
             >WEB <span class="logo-studio">Studio</span>
           </a>
-          <ul class="menu list text">
+          <ul class="menu list text header-mobile">
             <li class="menu-item">
               <a href="./index.html" class="menu-item-link link current"
                 >Studio</a
@@ -47,7 +47,12 @@
             </li>
           </ul>
         </nav>
-        <address class="address">
+        <button type="button" class="mobile-menu-open js-open-menu">
+          <svg class="mobile-menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-burger-menu"></use>
+          </svg>
+        </button>
+        <address class="address address-mobile">
           <ul class="contacts list">
             <li class="contacts-item">
               <a class="contacts-link link" href="mailto:info@devstudio.com"
@@ -61,6 +66,86 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="mobile-menu js-menu-container">
+        <div class="container mobile-menu-container">
+          <div>
+            <button class="mobile-menu-close js-close-menu" type="button">
+              <svg class="mobile-menu-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+
+            <ul class="mobile-header list">
+              <li class="menu-item">
+                <a
+                  class="menu-item-link contact-blue link current"
+                  href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="menu-item">
+                <a class="menu-item-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="menu-item">
+                <a class="menu-item-link link" href="">Contacts</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <address class="mobile-address">
+              <ul class="mobile-address-window list">
+                <li class="mobile-contacts">
+                  <a class="mobile-contacts-tel link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mobile-contacts">
+                  <a
+                    href="mailto:info@devstudio.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="mobile-contacts-email link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+
+            <ul class="social-list mb-menu list">
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg class="media-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg class="media-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg class="media-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg class="media-link" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -422,7 +507,7 @@
     <!--section-footer-->
     <footer class="footer">
       <div class="container container-footer">
-        <div>
+        <div class="footer-logo">
           <a href="./index.html" class="footer-logo-web link"
             >WEB
             <span class="footer-logo-studio link">Studio</span>
@@ -433,7 +518,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-social">
           <h3 class="social">Social media</h3>
           <ul class="social-item list">
             <li class="social-link link">
